Disable fullscreen pointer events

--- a/MMM-TouchNavigation.css
+++ b/MMM-TouchNavigation.css
@@ -6,6 +6,9 @@
  * MIT Licensed.                                     *
  *                                                   *
  *****************************************************/
+.region.fullscreen {
+    pointer-events: none;
+}
 .navigation-menu {
     display: flex;
     align-items: stretch;
